--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 select {
   border: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: url(./assets/down-arrow.svg) no-repeat right #ffffff;
+  background-size: 9px 9px;
+  padding-right: 20px;
+  background-origin: content-box;
 }
 
+.custom-select {
+  background-size: 15px 15px;
+  background: url(./assets/colored-arrow.svg) no-repeat right #ffffff;
+}
+p {
+  @apply font-poppins;
+}
 .bg-custom {
   @apply bg-[url('./assets/bg-image.png')];
 }
 
 .bg-gradient-custom {
   @apply sm:bg-[url('./assets/gradient-faded.png')];
-}
-
-.bg-box-shadow {
-  box-shadow: 0px 40px 64px -32px #0f0f0f1a;
-  backdrop-filter: blur(32px);
-  background: linear-gradient(83.59deg, #fcfcfd 36.52%, rgba(252, 252, 253, 0.83) 98.8%);
 }
